# burn

./: Cargo.toml  ft.txt
.cargo/: config.toml
crates/burn/: Cargo.toml
crates/burn-backend-tests/: Cargo.toml  tests.jsomn  tests.txt
crates/burn-backend-tests/.cargo/: config.toml
crates/burn-core/: Cargo.toml
crates/burn-cubecl/src/kernel/: binary.rs
crates/burn-dispatch/: Cargo.toml
crates/burn-dispatch/src/: backend.rs  device.rs  lib.rs  macros.rs  plugin.rs  remote_server.rs  tensor.rs
crates/burn-dispatch/src/dynamic/: backend.rs  device.rs  mod.rs  runtime.rs  tensor.rs
crates/burn-dispatch/src/dynamic/ops/: stubs.rs  tensor.rs
crates/burn-dispatch/tests/: dylib_runtime.rs
crates/burn-dispatch/tests/fixtures/dispatch-plugin/: Cargo.toml
crates/burn-dispatch/tests/fixtures/dispatch-plugin/src/: lib.rs
crates/burn-dispatch/tests/fixtures/mock-plugin/: Cargo.toml
crates/burn-dispatch/tests/fixtures/mock-plugin/src/: lib.rs
crates/burn-dylib/: Cargo.toml
crates/burn-dylib/src/: adapter.rs  backend.rs  dense.rs  device.rs  lib.rs  runtime.rs  tensor.rs
crates/burn-dylib/src/ops/: activation.rs  bool_tensor.rs  int_tensor.rs  mod.rs  module.rs  qtensor.rs  stubs.rs  tensor.rs  transaction.rs
crates/burn-remote/: Cargo.toml
crates/burn-remote/docs/: graph-replay.md  wasm-server-feasibility.md
crates/burn-remote/src/: lib.rs  node.rs  peer.rs  telemetry.rs
crates/burn-remote/src/client/: base.rs  mod.rs  runner.rs  service.rs
crates/burn-remote/src/client/service/: writer.rs
crates/burn-remote/src/server/: base.rs  iroh.rs  local_comm.rs  mod.rs  session.rs  spawn.rs  time.rs  transfer.rs  worker.rs
crates/burn-remote/src/shared/: task.rs
crates/burn-remote/tests/: iroh.rs
crates/burn-tensor/: Cargo.toml
crates/burn-tensor-testgen/src/: lib.rs
crates/burn-tensor/src/: device.rs  server.rs
crates/burn/src/: backend.rs  lib.rs
examples/guide/: Cargo.toml  README.md  build.rs
examples/guide/src/: backend.rs  lib.rs
examples/p2p-remote-training/: Cargo.toml
examples/p2p-remote-training/examples/: p2p-remote-training.rs
examples/p2p-remote-training/src/: lib.rs
examples/remote-compute-dashboard/: Cargo.toml
examples/remote-compute-dashboard/src/: lib.rs  render.rs  state.rs
examples/remote-compute-peer/: Cargo.toml  build.rs
examples/remote-compute-peer-web/: Cargo.toml  README.md  build-for-web.sh  index.html  run-server.sh
examples/remote-compute-peer-web/src/: lib.rs
examples/remote-compute-peer/src/: main.rs
examples/remote-dashboard-web/: Cargo.toml  README.md  build-for-web.sh  index.html
examples/remote-dashboard-web/src/: lib.rs
examples/remote-inference-web/: Cargo.toml
examples/remote-inference-web/src/: web.rs
examples/remote-notebook/: Cargo.toml  README.md  notebook.ipynb
examples/remote-notebook/src/: lib.rs  main.rs
examples/remote-playground-web/: Cargo.toml  README.md  index.html
examples/remote-playground-web/src/: eval.rs  lib.rs  web.rs
examples/remote-swarm/: Cargo.toml  OFFICE_DEMO.md  README.md
examples/remote-swarm-client-web/: Cargo.toml  README.md  build-for-web.sh  index.html  run-server.sh
examples/remote-swarm-client-web/src/: lib.rs
examples/remote-swarm-cluster/: Cargo.toml  README.md
examples/remote-swarm-cluster/src/: main.rs
examples/remote-swarm/src/: lib.rs  message.rs  roster.rs  swarm.rs  ticket.rs
examples/remote-training-web/: Cargo.toml  README.md  index.html
examples/remote-training-web/src/: model.rs  web.rs
examples/server/: Cargo.toml
examples/webgpu-selftest-web/: Cargo.toml  build-for-web.sh  index.html
examples/webgpu-selftest-web/src/: lib.rs
