[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Backend router decorator over the network."
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "data"]
license.workspace = true
name = "burn-remote"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/crates/burn-router-remote"
documentation = "https://docs.rs/burn-router-remote"
version.workspace = true

[lints]
workspace = true

[features]
default = ["client", "server", "iroh", "websocket"]
doc = []
tracing = [
    "burn-communication/tracing",
    "burn-ir/tracing",
    "burn-router/tracing",
    "burn-std/tracing",
    "burn-backend/tracing",
]

client = ["tokio/sync"]
server = ["tokio/sync"]
iroh = ["dep:iroh", "tokio/io-util", "tokio/time"]
websocket = [
    "burn-communication/websocket",
    "burn-communication/data-service",
    "dep:tokio-util",
]


[dependencies]
burn-ir = { workspace = true, features = ["default"] }
burn-backend = { workspace = true, features = [
    "default",
    "serde", # For DTypeUsageSet to be de/serialized
] }
burn-std = { workspace = true, features = ["default"] }
burn-router = { workspace = true, features = ["default"] }
burn-communication = { workspace = true }

bytes = { workspace = true }

# Basic dependencies
log = { workspace = true }
rand = { workspace = true }

# Shared dependencies
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
iroh = { workspace = true, optional = true }

tokio-util = { workspace = true, optional = true }

[dev-dependencies]
burn-flex = { workspace = true, features = ["default"] }
burn-tensor = { workspace = true, features = ["default", "remote"] }

[package.metadata.docs.rs]
features = ["doc"]
rustdoc-args = ["--cfg", "docsrs"]
