[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
edition.workspace = true
license.workspace = true
name = "guide"
publish = false
version.workspace = true

[lints]
workspace = true

[features]
default = ["burn/tui", "webgpu"]
webgpu = ["burn/webgpu"]
vulkan = ["burn/vulkan"]
dylib = ["burn/dylib"]

[dependencies]
burn = { path = "../../crates/burn", features = [
    "train",
    "vision",
], default-features = false }

# Serialization
log = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
