[package]
authors = ["Jonathan Richard"]
edition.workspace = true
license = "MIT OR Apache-2.0"
name = "remote-compute-peer-web"
publish = false
version.workspace = true
description = "Run a Burn compute peer in the browser, serving tensor operations on WebGPU over Iroh, with a live egui dashboard"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# The browser peer serves through the umbrella `burn::server::serve` API on the WebGPU (wgpu)
# backend. `server` is the wasm-capable Iroh server feature; `extension` exposes `burn::backend`.
burn = { workspace = true, features = ["server", "wgpu", "extension"] }
remote-compute-dashboard = { path = "../remote-compute-dashboard" }
iroh = { workspace = true }
blake3 = { version = "1", default-features = false }
console_error_panic_hook = { workspace = true }

eframe = { version = "0.29", default-features = false, features = [
    "glow",
    "default_fonts",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }

# Wasm dependencies
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
