[package]
authors = ["Jonathan Richard"]
edition.workspace = true
license = "MIT OR Apache-2.0"
name = "remote-dashboard-web"
publish = false
version.workspace = true
description = "Browser viewer for a Burn Remote peer's telemetry, rendered with egui and fed over SSE"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
remote-compute-dashboard = { path = "../remote-compute-dashboard" }
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "EventSource",
    "MessageEvent",
    "Event",
] }
serde_json = "1"
console_error_panic_hook = { workspace = true }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# Iroh (pulled in transitively) uses getrandom on wasm; enable its wasm_js backend feature. The
# build also sets `--cfg getrandom_backend="wasm_js"` (see build-for-web.sh / the peer's build.rs).
[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
