[package]
authors = ["Jonathan Richard"]
edition.workspace = true
license = "MIT OR Apache-2.0"
name = "remote-swarm-client-web"
publish = false
version.workspace = true
description = "Browser client that fans a Mandelbrot across a Burn compute swarm and renders it"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["flex"]
# The remote peers do the compute; flex only provides a sensible Device::default() for the wasm build.
flex = ["burn/flex"]

[dependencies]
burn = { workspace = true, features = ["extension", "remote-iroh"] }
remote-swarm = { path = "../remote-swarm" }
iroh = { workspace = true }
futures-util = { workspace = true }
web-time = "1"
console_error_panic_hook = { workspace = true }

eframe = { version = "0.29", default-features = false, features = [
    "glow",
    "default_fonts",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
