[package]
authors = ["Jonathan Richard"]
edition.workspace = true
license = "MIT OR Apache-2.0"
name = "remote-training-web"
publish = false
version.workspace = true
description = "Train a Burn model in the browser with gradients and updates executed on a remote Iroh peer"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["flex"]

# Local fallback backend, only used for `Device::default()`; training runs on the remote device.
flex = ["burn/flex"]

[dependencies]
burn = { workspace = true, features = ["extension", "remote-iroh", "autodiff", "optim"] }
blake3 = { version = "1", default-features = false }
console_error_panic_hook = { workspace = true }

# Wasm dependencies
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
