[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
edition.workspace = true
license.workspace = true
name = "server"
publish = false
version.workspace = true

[lints]
workspace = true

[features]
default = ["webgpu"]
cuda = ["burn/cuda"]
webgpu = ["burn/webgpu"]
vulkan = ["burn/vulkan"]
rocm = ["burn/rocm"]
flex = ["burn/flex"]

[dependencies]
# `remote` brings the legacy websocket server transport this example uses (Channel::WebSocket).
burn = { workspace = true, features = ["default", "server", "remote"] }
